tests/suite/errors/e43_unicode_escape_surrogate.rs
// err: is a surrogate code point

fn main() {
    let _c = '\u{d800}';
}
